add firebase and json dependencies

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
     buildTypes.each {
         it.buildConfigField 'String', 'SANDBOX_KEY', SandboxKey
     }
@@ -54,4 +50,6 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.firebaseui:firebase-ui-database:3.3.1'
 }
+apply plugin: 'com.google.gms.google-services'
