--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,5 +64,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.firebaseui:firebase-ui-database:3.3.1'
     implementation 'com.google.firebase:firebase-database:19.6.0'
+    implementation 'com.google.firebase:firebase-auth:20.0.2'
 }
 apply plugin: 'com.google.gms.google-services'
