--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,11 @@ android {
         it.buildConfigField 'String', 'SANDBOX_KEY', SandboxKey
     }
 
+}    compileOptions {
+    sourceCompatibility 1.8
+    targetCompatibility 1.8
 }
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -65,5 +69,6 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-database:3.3.1'
     implementation 'com.google.firebase:firebase-database:19.6.0'
     implementation 'com.google.firebase:firebase-auth:20.0.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
 apply plugin: 'com.google.gms.google-services'
